<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_swipe"
        android:icon="@drawable/ic_swipe_mode_black_24px"
        android:title="@string/title_Match" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24px"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_chat_black_24px"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_black_24px"
        android:title="@string/title_account" />

</menu>